losses recorded to local storage, recalled at page start

--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
             </button>
         </section>
         <!-- YOU WIN!! -->
-        <section class="visible">
-            <div>YOU WIN!</div>
+        <section id="endGame" class="visible">
+            <div><span id="endGameText">winner!</span></div>
+        </section>
+        <!-- You LOSE! -->
+        <section id="endGame" class="visible">
+            <div><span id="endGameText">loser!</span></div>
         </section>
         <div class="container">
             <h2>SCORE</h2>
