started to add ability to record score, add CSS

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div>Quiz Time!</div>
-        <button id="start-button">Start</button>
+        <h1>Quiz Time!</h1>
+        <button class="large button" id="start-button">Start</button>
     </header>
 
     <main class="question">
