updated README, added some more CSS elements

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Quiz Time!</h1>
-        <button class="large button" id="start-button">Start</button>
+        <button id="start-button">Start</button>
     </header>
 
     <main class="question">
@@ -96,16 +96,19 @@
         <section id="endGame" class="visible">
             <div><span id="endGameText">loser!</span></div>
         </section>
-        <div class="container">
-            <h2>SCORE</h2>
+    </main>
+    <div class="score">
+        <div>
+            <h3>SCORE</h3>
             <div>wins: <span id="win">0</span></div>
             <div>losses: <span id="lose">0</span></div>
         </div>
-        <div class=timerBox>
+        <h3>Timer</h3>
+        <div>
             <div class="timer">10</div>
             <div>Seconds left</div>
         </div>
-    </main>
+    </div>
 
 
 
